update awards and pubs

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
@@ -55,6 +56,8 @@
   
 
   
+  
+  
 
   
   <link rel="alternate" href="https://ccoffrin.github.io/index.xml" type="application/rss+xml" title="Carleton Coffrin">
@@ -79,6 +82,7 @@
   
 
   
+
   
 
   <title>Carleton Coffrin</title>
@@ -435,10 +439,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1711.01728" target="_blank" rel="noopener">
-  PDF
-</a>
-
 
 
 
@@ -455,6 +455,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1711.01728" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -475,22 +479,22 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1710.07861" target="_blank" rel="noopener">
-  PDF
+  arXiv
 </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </p>
 </div>
@@ -511,10 +515,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1707.00355" target="_blank" rel="noopener">
-  PDF
-</a>
-
 
 
 
@@ -531,6 +531,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1707.00355" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -550,10 +554,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1512.04644.pdf" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://ieeexplore.ieee.org/abstract/document/7763860/" target="_blank" rel="noopener">
   PDF
@@ -571,6 +571,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1512.04644.pdf" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -590,10 +594,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1502.07847.pdf" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://ieeexplore.ieee.org/document/7271127/" target="_blank" rel="noopener">
   PDF
@@ -611,6 +611,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1502.07847.pdf" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -671,22 +675,22 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1411.0359" target="_blank" rel="noopener">
-  PDF
+  arXiv
 </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </p>
 </div>
@@ -706,10 +710,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1206.3614.pdf" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2014.0594" target="_blank" rel="noopener">
   PDF
@@ -727,6 +727,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1206.3614.pdf" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -841,6 +845,10 @@
 
 <h2 id="awards">Awards</h2>
 
+<p>Los Alamos National Laboratory 2018 LAAP Award for <em>C2S Development Efforts</em></p>
+
+<p>Los Alamos National Laboratory 2017 LAAP Award for <em>Exploration of Quantum Computation</em></p>
+
 <p>Los Alamos National Laboratory 2017 Early Career Researcher Award for <em>Large-Scale Nonlinear Optimization via Cloud Computing</em></p>
 
 <p>PES 2014, <a href="https://www.uni-due.de/ieee-wgmho/competition2014" target="_blank">Application of Modern Heuristic Optimization Algorithms</a> for <em>Solving Optimal Power Flow Problems</em>, finalist (1 of 5), for Heuristic MINLP for Optimal Power Flow Problems</p>
@@ -849,7 +857,7 @@
 
 <p>INFORMS 2010 <a href="https://www.informs.org/Recognizing-Excellence/INFORMS-Prizes/Doing-Good-with-Good-OR-Student-Paper-Competition" target="_blank">Doing Good with Good OR Competition</a> finalist (1 of 6), for <a href="http://www.springerlink.com/content/j13v80g77l1p436t/" target="_blank"><em>Strategic Planning for Disaster Recovery with Stochastic Last Mile Distribution</em></a></p>
 
-<p>Los Alamos National Laboratory 2010 LAAP Award for <em>Outstanding Summer Research for Power Grid Restoration for Disaster Recovery</em></p>
+<p>Los Alamos National Laboratory 2010 LAAP Award for <em>Outstanding Summer Research in Power Grid Restoration for Disaster Recovery</em></p>
 
 <h2 id="professional-service">Professional Service</h2>
 
@@ -931,6 +939,9 @@
 
 <footer class="site-footer">
   <div class="container">
+
+    
+
     <p class="powered-by">
 
       &copy; 2018 &middot; 
