--- a/publication/index.html
+++ b/publication/index.html
@@ -48,6 +48,8 @@
   
 
   
+  
+  
 
   
   <link rel="alternate" href="https://ccoffrin.github.io/publication/index.xml" type="application/rss+xml" title="Carleton Coffrin">
@@ -72,6 +74,7 @@
   
 
   
+
   
 
   <title>Publications | Carleton Coffrin</title>
@@ -334,10 +337,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1711.01728" target="_blank" rel="noopener">
-  PDF
-</a>
-
 
 
 
@@ -354,6 +353,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1711.01728" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -381,22 +384,22 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1710.07861" target="_blank" rel="noopener">
-  PDF
+  arXiv
 </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </p>
 </div>
@@ -424,10 +427,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1707.00355" target="_blank" rel="noopener">
-  PDF
-</a>
-
 
 
 
@@ -444,6 +443,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1707.00355" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -470,10 +473,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1512.04644.pdf" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://ieeexplore.ieee.org/abstract/document/7763860/" target="_blank" rel="noopener">
   PDF
@@ -491,6 +490,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1512.04644.pdf" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -517,10 +520,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1502.07847.pdf" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://ieeexplore.ieee.org/document/7271127/" target="_blank" rel="noopener">
   PDF
@@ -538,6 +537,10 @@
 
 
 
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1502.07847.pdf" target="_blank" rel="noopener">
+  arXiv
+</a>
 
 </p>
 </div>
@@ -612,22 +615,22 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1411.0359" target="_blank" rel="noopener">
-  PDF
+  arXiv
 </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </p>
 </div>
@@ -654,10 +657,6 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1206.3614.pdf" target="_blank" rel="noopener">
-  Preprint
-</a>
-
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://pubsonline.informs.org/doi/abs/10.1287/ijoc.2014.0594" target="_blank" rel="noopener">
   PDF
@@ -676,6 +675,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/pdf/1206.3614.pdf" target="_blank" rel="noopener">
+  arXiv
+</a>
+
 </p>
 </div>
 
@@ -690,6 +693,9 @@
 </div>
 <footer class="site-footer">
   <div class="container">
+
+    
+
     <p class="powered-by">
 
       &copy; 2018 &middot; 
