updates to pubs and other

--- a/404.html
+++ b/404.html
@@ -249,23 +249,23 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="https://ccoffrin.github.io/publication/pglib-opf/">The Power Grid Library for Benchmarking AC Optimal Power Flow Algorithms</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://ccoffrin.github.io/publication/ipu/">Evaluating Ising Processing Units with Integer Programming</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://ccoffrin.github.io/publication/mld-ep/">Relaxations of AC Maximal Load Delivery for Severe Contingency Analysis</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://ccoffrin.github.io/publication/powermodels/">PowerModels.jl: An Open-Source Framework for Exploring Power Flow Formulations</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://ccoffrin.github.io/publication/mls-ep/">Relaxations of AC Minimal Load-Shedding for Severe Contingency Analysis</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://ccoffrin.github.io/publication/ipu/">Ising Processing Units: Potential and Challenges for Discrete Optimization</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://ccoffrin.github.io/publication/lnc/">Strengthening the SDP Relaxation of AC Power Flows With Convex Envelopes, Bound Tightening, and Valid Inequalities</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://ccoffrin.github.io/publication/qc/">The QC Relaxation: A Theoretical and Computational Study on Optimal Power Flow</a></li>
   </ul>
   
   
