--- a/publication/ac-obbt/index.html
+++ b/publication/ac-obbt/index.html
@@ -377,6 +377,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/ccoffrin/ac-opf-bounds" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
