Social Links and other links updated

--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1138,7 +1138,7 @@
       
     
     <li>
-      <a href="https://github.com/ccoffrin" target="_blank" rel="noopener">
+      <a href="https://github.com/sambuddhac" target="_blank" rel="noopener">
         <i class="fab fa-github"></i>
       </a>
     </li>
