--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
           
         
         <li>
-          <a href="https://github.com/ccoffrin" target="_blank" rel="noopener" aria-label="github">
+          <a href="https://github.com/sambuddhac" target="_blank" rel="noopener" aria-label="github">
             <i class="fab fa-github big-icon"></i>
           </a>
         </li>
