--- a/project/example/index.html
+++ b/project/example/index.html
@@ -1078,7 +1078,7 @@
       
     
     <li>
-      <a href="https://github.com/ccoffrin" target="_blank" rel="noopener">
+      <a href="https://github.com/sambuddhac" target="_blank" rel="noopener">
         <i class="fab fa-github"></i>
       </a>
     </li>
