--- a/index.html
+++ b/index.html
@@ -2446,7 +2446,7 @@
     
     <li>
       <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-      <span id="person-email"><a href="mailto:carleton@coffrin.com">carleton@coffrin.com</a></span>
+      <span id="person-email"><a href="mailto:sambuddha.chakrabarti@gmail.com">sambuddha.chakrabarti@gmail.com</a></span>
     </li>
     
 
