--- a/index.html
+++ b/index.html
@@ -2457,7 +2457,7 @@
       
       <li>
         <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-        <span id="person-address">Los Alamos, New Mexico 87544</span>
+        <span id="person-address">Andlinger 030, 86 Olden Street, Princeton, New Jersey 08540</span>
       </li>
     
 
