--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
         <div class="section-subheading">Interests</div>
         <ul class="ul-interests">
           
-          <li>Optimization</li>
+          <li>Mathematical Optimization (Convex & Non-convex Programming) and Operations Research</li>
 
           <li>Theory of Probability and Stochastic Processes</li>
 
