Added paper to Publications

--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/pca-ngs/" >Programmable Quantum Annealers as Noisy Gibbs Samplers</a>
+  <a href="/publication/pca-ngs/" >Security Constrained Optimal Power Flow via Proximal Message Passing</a>
 
   
 
