--- a/publication/index.html
+++ b/publication/index.html
@@ -833,7 +833,7 @@
       Marc Vuffray, Sambuddha Chakrabarti, Yaroslav A. Kharkov, Andrey Y. Lokhov</span>
   </span>
   (2020).
-  <a href="/publication/pca-ngs/">Programmable Quantum Annealers as Noisy Gibbs Samplers</a>.
+  <a href="/publication/pca-ngs/">Security Constrained Optimal Power Flow via Proximal Message Passing</a>.
   <em>arXiv</em>.
   
   <p>
