--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
     
 
   <span >
-      Marc Vuffray, Sambuddha Chakrabarti, Yaroslav A. Kharkov, Andrey Y. Lokhov</span>
+      Sambuddha Chakrabarti, Matt Kraning, Eric Chu, Ross Baldick, Stephen Boyd</span>
   </div>
   
 
@@ -1203,7 +1203,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/dwrsi/" >The Potential of Quantum Annealing for Rapid Solution Structure Identification</a>
+  <a href="/publication/dwrsi/" >Look-ahead SCOPF (LASCOPF) for Tracking Demand Variation via Auxiliary Proximal Message Passing (APMP) Algorithm</a>
 
   
 
@@ -1212,7 +1212,7 @@
     
 
   <span >
-      Yuchen Pang, Sambuddha Chakrabarti, Andrey Y. Lokhov, Marc Vuffray</span>
+      Sambuddha Chakrabarti, Ross Baldick</span>
   </div>
   
 
