--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/pglib-opf/" >The Power Grid Library for Benchmarking AC Optimal Power Flow Algorithms</a>
+  <a href="/publication/pglib-opf/" >Transmission Investment Coordination using MILP Lagrange Dual Decomposition and Auxiliary Problem Principle</a>
 
   
 
@@ -1311,7 +1311,7 @@
     
 
   <span >
-      The IEEE PES Task Force on Algorithm Benchmarks</span>
+      Sambuddha Chakrabarti, Hosna Khajeh, Thomas R Nudell, Mohammad Reza Hesamzadeh, Ross Baldick</span>
   </div>
   
 
@@ -1395,7 +1395,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/ipu/" >Evaluating Ising Processing Units with Integer Programming</a>
+  <a href="/publication/ipu/" >GenX Capacity Expansion Planning Model</a>
 
   
 
@@ -1404,9 +1404,7 @@
     
 
   <span >
-      Sambuddha Chakrabarti</span>, <span >
-      Harsha Nagarajan</span>, <span >
-      Russell Bent</span>
+    Luca Bonaldo, Sambuddha Chakrabarti, Fangwei Cheng, Yifu Ding, Jesse D. Jenkins, Qian Luo, Ruaridh Macdonald, Dharik Mallapragada, Aneesha Manocha, Gabe Mantegna, Jack Morris, Neha Patankar, Filippo Pecci, Aaron Schwartz, Jacob Schwartz, Greg Schivley, Nestor Sepulveda, Qingyu Xu</span>
   </div>
   
 
