Temporarily blocked out Teaching and awards section and revised Software section

--- a/index.html
+++ b/index.html
@@ -1861,12 +1861,9 @@
 
   <div class="col-12 col-lg-8">
     <ul>
-<li><a href="https://github.com/lanl-ansi/PowerModels.jl" target="_blank" rel="noopener">PowerModels.jl</a>: a Julia package for Power Network optimization</li>
-<li><a href="https://github.com/lanl-ansi/Juniper.jl" target="_blank" rel="noopener">Juniper.jl</a>: a nonlinear branch-and-bound <a href="https://github.com/JuliaOpt/JuMP.jl" target="_blank" rel="noopener">JuMP</a> solver for finding feasible solutions to non-convex mixed-integer nonlinear programs</li>
-<li><a href="https://github.com/ccoffrin/ac-opf-bounds" target="_blank" rel="noopener">ac-opf-bounds</a>: a python tool for optimization-based bound tightening on power network datasets</li>
-<li><a href="https://github.com/lanl-ansi/dwig" target="_blank" rel="noopener">DWIG</a>: a python tool for generating test cases for D-Wave quantum computer</li>
-<li><a href="https://github.com/ccoffrin/stac" target="_blank" rel="noopener">STAC</a>: a web-based tool for visualization for power network datasets</li>
-<li><a href="https://github.com/lanl-ansi/grg-mpdata" target="_blank" rel="noopener">grg-mpdata</a>: python parsers and data structures for <a href="http://www.pserc.cornell.edu/matpower/" target="_blank" rel="noopener">Matpower</a> data files</li>
+<li><a href="https://github.com/GenXProject/GenX.jl" target="_blank" rel="noopener">GenX.jl</a>: Julia package for highly reconfigurable Electricity sector Capacity Expansion Planning (CEP) model</li>
+<li><a href="https://github.com/sambuddhac/LASCOPF_Load_Variation" target="_blank" rel="noopener">LASCOPF_Load_Variation</a>: A C++ Look-Ahead SCOPF (LASCOPF) model for tracking load variation using ADMM-PMP and APP</li>
+<li><a href="https://github.com/sambuddhac/OPF" target="_blank" rel="noopener">OPF</a>: A C++ Optimal Power Flow model using ADMM-PMP</li>
 </ul>
 
   </div>
@@ -1920,7 +1917,7 @@
 
   
   
-
+<!--
   
   
 
@@ -2089,7 +2086,7 @@
     </div>
   </section>
 
-  
+  -->
   
   
   
